資料庫修改_v1

--- a/KuasWebApp/Views/Course.html
+++ b/KuasWebApp/Views/Course.html
@@ -3,13 +3,12 @@
 <head>
     <title>Employee</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.429/styles/kendo.common-material.min.css" />
-    <link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.429/styles/kendo.material.min.css" />
-    <link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.429/styles/kendo.dataviz.min.css" />
-    <link rel="stylesheet" href="http://cdn.kendostatic.com/2015.1.429/styles/kendo.dataviz.material.min.css" />
-
-    <script src="http://cdn.kendostatic.com/2015.1.429/js/jquery.min.js"></script>
-    <script src="http://cdn.kendostatic.com/2015.1.429/js/kendo.all.min.js"></script>
+    <link rel="stylesheet" href="style/kendo.common-material.min.css" />
+    <link rel="stylesheet" href="style/kendo.material.min.css" />
+    <link rel="stylesheet" href="style/kendo.dataviz.min.css" />
+    <link rel="stylesheet" href="style/kendo.dataviz.material.min.css" />
+   <script src="style/js/jquery.min.js"></script>
+    <script src="style/js/kendo.all.min.js"></script>
 </head>
 <body>
 
