--- a/KuasWebApp/Views/Employee.html
+++ b/KuasWebApp/Views/Employee.html
@@ -80,7 +80,7 @@
                     { field: "Description", title: "員工描述", width: "160px" },
                     {
                         command: [
-                            { name: "edit",  text: "修改" },
+                            { name: "edit",  text: "確認修改" },
                             { name: "destroy", text: "刪除" }
                         ], width: "250px"
                         }
