--- a/KuasWebApp/Views/Employee.html
+++ b/KuasWebApp/Views/Employee.html
@@ -82,7 +82,7 @@
                         command: [
                             { name: "edit", id:"comedit" , text: "確認修改" },
                             { name: "destroy", text: "刪除" },
-                            { text: "View Details", click: showDetails }
+                            { name: "detail" , text: "View Details", click: showDetails }
                         ], width: "250px"
                     }]
 
